--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,12 +13,12 @@
     <% if @minimum_password_length %>
     <em>не менее <%= @minimum_password_length %> символов</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", hide_label: true %>
   </div>
 
   <div class="field">
     <%= f.label :Подтверждение_пароля %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", hide_label: true %>
   </div>
 
   <div class="action">
@@ -26,4 +26,5 @@
   </div>
 <% end %>
 
+<br \>
 <%= render "devise/shared/links" %>
