--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,9 @@
 <h2>Регистрация</h2>
 
-<%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), inline_erorrs: true, label_errors: true, layout: :horizontal, control_col: "col-4 col-sm-4 col-md-4") do |f| %>
   <%= devise_error_messages! %>
-
-
-
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "example@domain.com" %>
-
-
+    <%= f.label :email %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "example@domain.com", hide_label: true %>
   <div class="field">
     <%= f.label :Пароль %>
     <% if @minimum_password_length %>
