--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,6 +17,8 @@
           <div class="buffer-top">
             <%= link_to 'Изменить', edit_event_path(@event),
                         class: 'btn btn-primary' %>
+            <%= link_to 'Удалить', @event, method: :delete,
+                        class: 'btn btn-primary', data: { confirm: t('event.destroy_message') }%>
           </div>
             <% end %>
         </div>
