--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,4 +26,33 @@
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="event-comments buffer-top">
+        <div class="buffer-both">
+          <%= render partial: 'comments/comment', collection: @event.comments %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="event-owner">
+        <h4>Зовет:</h4>
+        <p><%= render partial: 'users/user', object: @event.user %></p>
+      </div>
+      <div class="event-subscriptions">
+        <h4>Пойдут:</h4>
+        <div>
+          <p>
+            <%= render(
+                    partial: 'subscriptions/subscription',
+                    collection: @event.subscriptions
+                ) %>
+          </p>
+        </div>
+      </div>
+      <div class="event-subscription-form">
+        <h4>Я пойду:</h4>
+      </div>
+    </div>
+  </div>
 </div>
