subscriptions and comments adding is not yet finished

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -30,10 +30,12 @@
     <div class="col-md-8">
       <div class="event-comments buffer-top">
         <div class="buffer-both">
-          <%= render partial: 'comments/comment', collection: @event.comments %>
+          <%= render partial: 'comments/comment',
+                     collection: @event.comments.except(@new_comment) %>
         </div>
       </div>
     </div>
+
     <div class="col-md-4">
       <div class="event-owner">
         <h4>Зовет:</h4>
@@ -43,10 +45,8 @@
         <h4>Пойдут:</h4>
         <div>
           <p>
-            <%= render(
-                    partial: 'subscriptions/subscription',
-                    collection: @event.subscriptions
-                ) %>
+            <%= render partial: 'subscriptions/subscription',
+                       collection: @event.subscriptions %>
           </p>
         </div>
       </div>
