--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,6 +29,8 @@
   <div class="row">
     <div class="col-md-8">
       <div class="event-comments buffer-top">
+        <%= render partial: 'comments/form', locals: {comment: @new_comment || @event.comments.build} %>
+
         <div class="buffer-both">
           <%= render partial: 'comments/comment',
                      collection: @event.comments.except(@new_comment) %>
@@ -46,13 +48,14 @@
         <div>
           <p>
             <%= render partial: 'subscriptions/subscription',
-                       collection: @event.subscriptions %>
+                       collection: @event.subscriptions.except(@new_subsctiption) %>
           </p>
         </div>
       </div>
       <div class="event-subscription-form">
         <h4>Я пойду:</h4>
       </div>
+      <%= render partial: 'subscriptions/form', locals: {subscription: @new_subsctiption || @event.subscriptions.build} %>
     </div>
   </div>
 </div>
