--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -54,7 +54,7 @@
           </p>
         </div>
       </div>
-      <% if @event.user.id != current_user.id %>
+      <% unless current_user == @event.user %>
         <div class="event-subscription-form">
           <h4>Я пойду:</h4>
         </div>
