--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -55,12 +55,14 @@
         </div>
       </div>
       <div class="event-subscription-form">
+        <% unless current_user == @event.user %>
         <h4>Я пойду:</h4>
         <div>
           <%= render partial: 'subscriptions/form', locals: {
               subscription: @new_subscription || @event.subscriptions.build
           } %>
         </div>
+          <% end %>
       </div>
     </div>
   </div>
