--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
   <div class="event-info row">
     <div class="col-md-12">
       <%= content_tag 'div', '', class: 'event-background',
-                      style: "background-image: url(#{asset_path('event.jpg')})" %>
+                      style: "background-image: url(#{event_photo(@event)})" %>
 
       <div class="event-info-inner row">
         <div class="col-md-6">
@@ -29,6 +29,17 @@
 
   <div class="row">
     <div class="col-md-8">
+      <div class="event-photos">
+        <div class="event-photos-gallery">
+          <%= render partial: 'photos/photo', collection: @event.photos.except(@new_photo) %>
+        </div>
+
+        <%# Рисуем форму для добавления новой фотографии %>
+        <div class="event-photo-form">
+          <%= render partial: 'photos/form', locals: {photo: @new_photo || @event.photos.build} %>
+        </div>
+      </div>
+
       <div class="event-comments buffer-top">
         <%= render partial: 'comments/form',
                    locals: {comment: @new_comment || @event.comments.build} %>
@@ -38,6 +49,7 @@
                      collection: @event.comments.except(@new_comment) %>
         </div>
       </div>
+    </div>
     </div>
 
     <div class="col-md-4">
