--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -20,6 +20,7 @@
             <div class="buffer-both">
               <%= link_to 'Изменить', edit_event_path(@event),
                           class: 'btn btn-primary' %>
+              <%= link_to 'Удалить', @event, method: :delete, class: 'btn btn-danger', data: {confirm: t('activerecord.models.event_destroy')} %>
             </div>
           <% end %>
         </div>
