--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
 <h2>Регистрация</h2>
 
-<%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), inline_erorrs: true, label_errors: true, layout: :horizontal, control_col: "col-4 col-sm-4 col-md-4") do |f| %>
-  <%= devise_error_messages! %>
+<%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), layout: :horizontal, control_col: "col-4 col-sm-4 col-md-4") do |f| %>
+
     <%= f.label :email %>
-    <%=f.error_span(:email) %>
+
     <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "example@domain.com", hide_label: true %>
 
   <div class="field">
@@ -11,13 +11,11 @@
     <% if @minimum_password_length %>
     <em>не менее <%= @minimum_password_length %> символов</em>
     <% end %><br />
-    <%=f.error_span(:password) %>
     <%= f.password_field :password, autocomplete: "off", hide_label: true %>
   </div>
 
   <div class="field">
     <%= f.label :Подтверждение_пароля %><br />
-    <%=f.error_span(:password_confirmation) %>
     <%= f.password_field :password_confirmation, autocomplete: "off", hide_label: true %>
   </div>
 
