--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,25 @@
-<h2>Change your password</h2>
+<h2>Сбросить пароль</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+<%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }, layout: :horizontal, control_col: "col-4 col-sm-4 col-md-4") do |f| %>
+
   <%= f.hidden_field :reset_password_token %>
 
   <div class="field">
-    <%= f.label :password, "New password" %><br />
+    <%= f.label :Пароль %>
     <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+      <em>не менее <%= @minimum_password_length %> символов</em>
+    <% end %><br />
+    <%= f.password_field :password, autofocus: true, autocomplete: "off", hide_label: true %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.label :password_confirmation, "Подтвердить пароль" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", hide_label: true %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Change my password" %>
+    <%= f.submit "Поменять пароль", class: "btn btn-primary" %>
   </div>
 <% end %>
-
+<br/>
 <%= render "devise/shared/links" %>
