--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,10 +9,12 @@
           <div class="event-description">
             <h1><%= @event.title %></h1>
             <h3><%= l @event.datetime, format: :short %></h3>
-            <h3>
-              <small><%= link_to @event.address,
-                                 "https://yandex.ru/maps/?text=#{@event.address}" %></small>
-            </h3>
+
+            <div id="map"
+                 data-address=<%= @event.address %>,
+                 style="width: 100%; height: 400px;">
+            </div>
+
             <p><%= @event.description %></p>
           </div>
 
@@ -27,6 +29,7 @@
       </div>
     </div>
   </div>
+
 
   <div class="row">
     <div class="col-md-8">
