--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,14 +10,12 @@
             <h1><%= @event.title %></h1>
             <h3><%= l @event.datetime, format: :short %></h3>
 
-            <div id="map"
-                 data-address=<%= @event.address %>,
-                 style="width: 100%; height: 400px;">
-            </div>
+            <h3>
+              <small><%= @event.address %></small>
+            </h3>
 
             <p><%= @event.description %></p>
           </div>
-
           <% if current_user_can_edit?(@event) %>
             <div class="buffer-both">
               <%= link_to 'Изменить', edit_event_path(@event),
@@ -26,6 +24,15 @@
             </div>
           <% end %>
         </div>
+        <div class="col-md-6">
+          <div class="event-map" id="map"
+               data-address="<%= @event.address %>">
+          </div>
+        </div>
+
+
+
+
       </div>
     </div>
   </div>
