--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,6 +1,13 @@
 <%# Паршал для вывода отдельной фотографии %>
 <div class="event-photo buffer-both">
-  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url %>
+  <% image_title = "Добавил #{render partial: 'users/user', object: photo.user} #{ link_to(fa_icon('trash'),
+                                                                                           event_photo_path(photo.event, photo),
+                                                                                           method: :delete,
+                                                                                           data: {confirm: t('.destroy_confirm')}) if current_user_can_edit?(photo)}"%>
+
+  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url, data: {
+      toggle: 'lightbox', title: image_title, gallery: 'event-photos'
+  } %>
 
   <%# Показываем не только фотку, но и юзаре, который её добавил %>
   Добавил <%= render partial: 'users/user', object: photo.user %>
